--- a/backend/package.json
+++ b/backend/package.json
@@ -9,15 +9,15 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
 }
-
